k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semantic-frontend
  labels:
    app: semantic-frontend
spec:
  type: NodePort
  selector:
    app: semantic-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
